@@ -1,3 +1,6 @@
+2017-01-26  Markus Gans  <guru.mail@muenster.de>
+	* FScrollView now scrolls automatically to the focused widget
+
 2017-01-22  Markus Gans  <guru.mail@muenster.de>
 	* A FScrollView object can now have client widgets 
 	  on the scrolling area
